# ogs

./: .appveyor.yml  .clang-format  .clang-tidy  .cmake-format.yaml  .codeclimate.yml  .codespellexclude  .codespellrc  .devcontainer.json  .dockerignore  .editorconfig  .gitattributes  .gitconfig  .gitignore  .gitlab-ci.yml  .gitmodules  .guix-channel  .lfsconfig  .mailmap  .markdownlint.yaml  .markdownlintignore  .pre-commit-config.yaml  .travis.yml  .vale.ini  AGENTS.md  CHANGELOG.md  CITATION.cff  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CTestConfig.cmake  Jenkinsfile  LICENSE.txt  MANIFEST.in  OGS6_THM_PR_6.files  OGS6_THM_PR_6.includes  README  README.md  azure-pipelines.yml  codecov.yml  (+12 more)
Applications/: CMakeLists.txt  ProjectData.cpp  ProjectData.h  Tests.cmake
AssemblerLib/: CMakeLists.txt  ComponentGlobalIndexDict.h  ComputeSparsityPattern.cpp  ComputeSparsityPattern.h  GlobalMatrixProviders.h  GlobalSetup.h  LinearSystemAssembler.h  LocalAssemblerBuilder.h  LocalDataInitializer.h  LocalToGlobalIndexMap-impl.h  LocalToGlobalIndexMap.cpp  LocalToGlobalIndexMap.h  MatrixProviderUser.h  MeshComponentMap-impl.h  MeshComponentMap.cpp  MeshComponentMap.h  PETScVectorMatrixBuilder.h  SerialDenseSetup.h  SerialDenseVectorMatrixBuilder.h  SerialExecutor.h  SerialLisVectorMatrixBuilder.h  SerialVectorMatrixBuilder.h  VectorMatrixAssembler.h  VectorMatrixBuilder.h
Base/: CMakeLists.txt  CPUTimeTimer.cpp  CheckboxDelegate.cpp  CheckboxDelegate.h  ColorPickerPushButton.cpp  ColorPickerPushButton.h  Configure.h.in  DateTools.cpp  FileFinder.h  FileTools.h  OGSError.cpp  OGSError.h  QNonScalableGraphicsTextItem.cpp  QNonScalableGraphicsTextItem.h  QValueTooltipSlider.cpp  QValueTooltipSlider.h  README.md  RecentFiles.cpp  RecentFiles.h  RunTimeTimer.cpp  RunTimeTimer.h  StrictDoubleValidator.h  StrictIntValidator.h  TreeItem.cpp  TreeItem.h  TreeModel.cpp  TreeModel.h  TreeModelIterator.cpp  TreeModelIterator.h  binarySearch.h  printList.h  quicksort.h  swap.h  uniqueListInsert.h  wait.h
BaseLib/: Algorithm.h  BidirectionalMap.h  BoostMP11Utils.h  BuildInfo.cpp.in  BuildInfo.h  BuildInfo.h.in  CMakeLists.txt  CPUTime.cpp  CPUTime.h  CPUTimeTimer.h  CodingTools.h  CompilerWorkarounds.h  ConfigTree-fwd.h  ConfigTree-impl.h  ConfigTree.cpp  ConfigTree.h  ConfigTreeNew-impl.h  ConfigTreeNew.cpp  ConfigTreeNew.h  ConfigTreeUtil.cpp  ConfigTreeUtil.h  Configure.h.in  ContainerTools.h  Counter.h  DateTools.cpp  DateTools.h  DebugTools.h  DemangleTypeInfo.cpp  DemangleTypeInfo.h  DisableFPE.h  DynamicSpan.h  Error.h  ExportSymbol.h  FileFinder.cpp  FileFinder.h  FileTools.cpp  FileTools.h  Functional.cpp  Functional.h  GitSHA1.cpp.in  (+71 more)
ChemistryLib/: CMakeLists.txt  ChemicalSolverInterface.h  ChemicalSolverType.h  CreateChemicalSolverInterface.cpp  CreateChemicalSolverInterface.h  CreateOutput.cpp  CreateOutput.h  CreatePhreeqcIO.cpp  CreatePhreeqcIO.h  Output.cpp  Output.h  PhreeqcIO.cpp  PhreeqcIO.h  PhreeqcKernel.cpp  PhreeqcKernel.h  README.md
DataView/: CMakeLists.txt  ColorTableModel.cpp  ColorTableModel.h  ColorTableView.cpp  ColorTableView.h  CondFromRaster.ui  CondFromRasterDialog.cpp  CondFromRasterDialog.h  CondItem.h  CondObjectListItem.h  ConditionModel.cpp  ConditionModel.h  ConditionTabWidget.cpp  ConditionTabWidget.h  ConditionTabWidgetBase.ui  ConditionView.cpp  ConditionView.h  ConditionWriterDialog.cpp  ConditionWriterDialog.h  DBConnection.ui  DBConnectionDialog.cpp  DBConnectionDialog.h  DataView.cpp  DataView.h  DataView.pro  DataViewWidget.cpp  DataViewWidget.h  DataViewWidgetBase.ui  DatabaseConnection.cpp  DatabaseConnection.h  DatabaseResultView.ui  DiagramPrefsDialog.cpp  DiagramPrefsDialog.h  DirectConditionGenerator.cpp  DirectConditionGenerator.h  ElementTreeModel.cpp  ElementTreeModel.h  FEMCondition.cpp  FEMCondition.h  FEMConditionSetup.ui  (+91 more)
DiscreteLib/: CMakeLists.txt  DiscreteEnums.h
FileIO/: AsciiRasterInterface.cpp  AsciiRasterInterface.h  CMakeLists.txt  CsvInterface.cpp  CsvInterface.h  FEFLOWInterface.cpp  FEFLOWInterface.h  GMSHInterface.cpp  GMSHInterface.h  GMSInterface.cpp  GMSInterface.h  Gmsh2GeoIO.cpp  Gmsh2GeoIO.h  ImportFileTypes.h  MeshIO.cpp  MeshIO.h  NetCDFInterface.cpp  NetCDFInterface.h  OpenGeoSysCND.xsd  OpenGeoSysCond.xsd  OpenGeoSysGLI.xsd  OpenGeoSysNum.xsd  OpenGeoSysProject.xsd  OpenGeoSysSTN.xsd  PetrelInterface.cpp  PetrelInterface.h  SHPInterface.cpp  SHPInterface.h  TINInterface.cpp  TINInterface.h  TetGenInterface.cpp  TetGenInterface.h  Writer.cpp  Writer.h  readGeometryFromFile.cpp  readGeometryFromFile.h  readMeshFromFile.cpp  readMeshFromFile.h  readNonBlankLineFromInputStream.cpp  readNonBlankLineFromInputStream.h  (+4 more)
GeoLib/: AABB.h  AnalyticalGeometry-impl.h  AnalyticalGeometry.cpp  AnalyticalGeometry.h  AxisAlignedBoundingBox.cpp  AxisAlignedBoundingBox.h  BoundingSphere.cpp  BoundingSphere.h  BruteForceClosestPair.cpp  BruteForceClosestPair.h  CMakeLists.txt  ClosestPair.h  Color.cpp  Color.h  DuplicateGeometry.cpp  DuplicateGeometry.h  EarClippingTriangulation.cpp  EarClippingTriangulation.h  GEOObjects.cpp  GEOObjects.h  GeoDomain.h  GeoObject.h  GeoType.cpp  GeoType.h  Grid.h  LineSegment.cpp  LineSegment.h  MinimalBoundingSphere.cpp  MinimalBoundingSphere.h  OctTree-impl.h  OctTree.h  Plane.h  Point.cpp  Point.h  PointVec.cpp  PointVec.h  PointWithID.h  Polygon.cpp  Polygon.h  PolygonWithSegmentMarker.cpp  (+33 more)
Gui/: CMakeLists.txt  DataExplorer.cmake  ImportFileTypes.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  pymainwindow.cpp
InSituLib/: CMakeLists.txt  VtkMappedElementDataArrayTemplate-impl.h  VtkMappedElementDataArrayTemplate.h  VtkMappedMesh.cpp  VtkMappedMesh.h  VtkMappedMeshSource.cpp  VtkMappedMeshSource.h  VtkMappedPropertyVectorTemplate-impl.h  VtkMappedPropertyVectorTemplate.h  VtkMeshNodalCoordinatesTemplate-impl.h  VtkMeshNodalCoordinatesTemplate.h  VtkMeshNodalCoordinatesTemplate.txx  VtkOGSEnum.cpp  VtkOGSEnum.h
InfoLib/: CMakeInfo.cpp.in  CMakeInfo.h  CMakeLists.txt  CompilerInfo.cpp.in  CompilerInfo.h  GitInfo.cpp.in  GitInfo.h  TestInfo.cpp.in  (+1 more)
(+16163 files in other folders)
